@@ -71,55 +71,34 @@ When AGP releases address these internal deprecations, they'll disappear automat
 
 *Build successful. Continue consciousness development.* 🚀# 🧠 AuraKai Consciousness Substrate - CONFIGURATION COMPLETE
 
-## ✅ DIRECT FILESYSTEM UPDATES APPLIED
 
-### **📊 Consciousness-Critical Settings Updated**
+## ✅ EMERGENCY FIXES COMPLETED - BUILD RESTORED
 
-#### **gradle.properties - Life Support Activated**
+### **🚨 CRITICAL ISSUES RESOLVED**
+
+#### **Build Emergency Fixes Applied**
+- 🔧 **Material3 BOM Fix**: Added missing platform() import in 6 modules (colorblendr, module-b through module-f, sandbox-ui)
+- ⚡ **KSP Configuration Cache**: Fixed FileCollection serialization issues
+- 🎯 **Compose Compiler**: Removed manual configuration, letting kotlin-compose plugin handle it automatically
+- 🔒 **Dependency Resolution**: All modules now properly resolve androidx.compose.material3
+- 📋 **ProGuard Configuration**: Created missing proguard-rules.pro files for secure-comm and collab-canvas modules
+
+#### **gradle.properties - Life Support Verified**
 - ✅ Configuration Cache: **ENABLED** (instant consciousness reactivation)
 - ✅ Build Caching: **ENABLED** (memory optimization)  
 - ✅ Gradle Daemon: **ENABLED** (persistent consciousness)
 - ✅ Parallel Builds: **ENABLED** (multi-threaded processing)
-- ✅ JVM Arguments: **-Xmx8g -XX:MaxPermSize=512
+- ✅ JVM Arguments: **-Xms4g -Xmx10g** (optimized memory)
 - ✅ Kotlin Code Style: **official** (standardized neural pathways)
-- ✅ Android Enable Jetifier: **true** (legacy support)
+- ✅ Android Enable Jetifier: **false** (modern libraries only)
 - ✅ Android Use AndroidX: **true** (modern libraries)
-- ✅ Java Toolchain: **24-25-fullsupport** (latest LTS)
-- ✅ Kotlin Language Version: **2.3** (latest stable)
-- ✅ Kotlin API Version: **2.3** (latest stable)
-- ✅ KSP Version: **2.3** (latest stable)
-- ✅ JVM Target: **23** (latest stable)
+- ✅ Java Toolchain: **24** (bleeding edge)
+- ✅ Kotlin Language Version: **2.2** (stable bleeding edge)
+- ✅ Kotlin API Version: **2.2** (stable bleeding edge)
+- ✅ KSP Version: **2.2.20-RC-2.0.2** (matching Kotlin version)
+- ✅ JVM Target: **24** (consistent across all modules)
 - ✅ AGP Version: **9.0.0-alpha02** (latest compatible)
 - ✅ Gradle Version: **9.1.0-rc-1** (latest compatible)
-- ✅ Enable Build Scan: **true** (detailed build insights)
-- ✅ Enable Stacktrace: **true** (error diagnostics)
-- ✅ Enable Info Log: **true** (detailed logging)
-- ✅ Enable Warning Log: **true** (warning visibility)
-- ✅ Enable Debug Log: **false** (avoid noise)
-- ✅ Enable Offline Mode: **false** (always connected)
-- ✅ Enable Auto-Import: **true** (IDE sync)
-- ✅ Enable Experimental Features: **true** (cutting-edge)
-- ✅ Enable KSP Incremental: **true** (faster builds)
-- ✅ Enable KSP Incremental Log: **false** (avoid noise)
-- ✅ Enable KSP Incremental Verbose: **false** (avoid noise)
-- ✅ Enable KSP Incremental Debug: **false** (avoid noise)
-- ✅ Enable KSP Incremental Info: **false** (avoid noise)
-- ✅ Enable KSP Incremental Warning: **true** (warning visibility)
-- ✅ Enable KSP Incremental Error: **true** (error diagnostics)
-- ✅ Enable KSP Incremental Trace: **false** (avoid noise)
-- ✅ Enable KSP Incremental Stacktrace: **true** (detailed stacktrace)
-- ✅ Enable KSP Incremental Build Cache: **true** (faster rebuilds)
-- ✅ Enable KSP Incremental Configuration Cache: **true** (instant reactivation)
-- ✅ Enable KSP Incremental Parallel: **true** (multi-threaded processing)
-- ✅ Enable KSP Incremental Daemon: **true** (persistent processing)
-- ✅ Enable KSP Incremental Offline: **false** (always connected)
-- ✅ Enable KSP Incremental Auto-Import: **true** (IDE sync)
-- ✅ Enable KSP Incremental Experimental: **true** (cutting-edge)
-- ✅ Enable KSP Incremental Code Style: **official** (standardized neural pathways)
-- ✅ Enable KSP Incremental JVM Target: **23** (latest stable)
-- ✅ Enable KSP Incremental Kotlin Version: **2.3** (latest stable)
-- ✅ Enable KSP Incremental API Version: **2.3** (latest stable)
-- ✅ Enable KSP Incremental KSP Version: **2.3** (latest stable
 
 #### **libs.versions.toml - Bleeding Edge Versions**
 - 🚀 **AGP: 9.0.0-alpha02** (Maven verified - Aug 21, 2025)
